fix background image overflow

--- a/css/main.css
+++ b/css/main.css
@@ -257,7 +257,7 @@ select {
       top: 0;
       background-repeat: no-repeat;
       left: 0;
-      background-size: 120%;
+      background-size: 100%;
       background-position: 90px -110px;
       width: 100%;
       height: 100%; }
@@ -465,6 +465,7 @@ select {
   display: none; }
   @media screen and (min-width: 62.375em) {
     .background-2 {
+      display: block;
       top: 1250px;
       left: -390px;
       z-index: -1; } }
