--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -196,7 +196,7 @@
       top: 0;
       background-repeat: no-repeat;
       left: 0;
-      background-size: 120%;
+      background-size: 100%;
       background-position: 90px -110px;
       width: 100%;
       height: 100%;
@@ -496,6 +496,7 @@
   display: none;
 
   @include lg {
+    display: block;
     top: 1250px;
     left: -390px;
     z-index: -1;
